--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -176,7 +176,7 @@
 .card .card_title{
 	font-weight: 100;
 	background: var(--main-color);
-	color: var(--button-fg);
+	color: var(--main-text-cl);
 	width: 100%;
 	line-height: 1;
 	padding: 10px;
