--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -2,6 +2,19 @@
 .text-left{ text-align:left !important; }
 .text-center{ text-align:center !important; }
 .text-right{ text-align:right !important; }
+.w1{ width: 100% / 12 }
+.w2{ width: 100% / 6 }
+.w3{ width: 25% }
+.w4{ width: 100% / 3 }
+.w5{ width: 100% * 5 / 12 }
+.w6{ width: 50% }
+.w7{ width: 100% * 7 / 12 }
+.w8{ width: 100% * 2 / 3 }
+.w9{ width: 75% }
+.w10{ width: 100% * 5 / 6 }
+.w11{ width: 100% * 11 / 12 }
+.w12{ width: 100% }
+.cols2{ display:grid; grid-template-columns: 1fr 1fr; }
 .shadow-1{ box-shadow: 0 1px 1px rgba(0,0,0,0.1);  }
 .shadow-2{ box-shadow: 0 1px 1px rgba(0,0,0,0.1), 0 2px 2px rgba(0,0,0,0.1);  }
 .shadow-3{ box-shadow: 0 1px 1px rgba(0,0,0,0.1), 0 2px 2px rgba(0,0,0,0.1), 0 4px 4px rgba(0,0,0,0.1);  }
