modified:   example.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   sass/_base.scss 	modified:   sass/_buttons.scss 	modified:   sass/_colors.scss 	modified:   sass/_components.scss 	modified:   sass/_helpers.scss 	modified:   sass/_inputfields.scss

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -12,7 +12,7 @@ body:not(.dark-mode){
 	--alert: #a21c24;
 	--alert-lighter: #f8d7da;
 
-	--main-color: #065661;
+	--main-color: #0854C7;
 	--main-color-lighter: #7FC7AF;
 	--main-text-cl: #fff;
 	--main-text-cl-darker: #ddd;
