--- a/jammer.css
+++ b/jammer.css
@@ -29,7 +29,7 @@ body:not(.dark-mode) {
   --warning-lighter: #fff3cd;
   --alert: #a21c24;
   --alert-lighter: #f8d7da;
-  --main-color: #065661;
+  --main-color: #0854C7;
   --main-color-lighter: #7FC7AF;
   --main-text-cl: #fff;
   --main-text-cl-darker: #ddd;
@@ -67,6 +67,7 @@ body.dark-mode {
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
+  font-size: 1.5vh;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -87,29 +88,35 @@ h2, h3, h4, h5, h6 {
   line-height: 1;
 }
 
+/*h1{font-size: 2rem;margin: 0.67rem 0;}
+h2{font-size: 1.5rem;}
+h3{font-size: 1.17rem;}
+h4{font-size: 1.00rem;}
+h5{font-size: 0.83rem;}
+h6{font-size: 0.67rem;}*/
 h1 {
-  font-size: 2rem;
-  margin: 0.67rem 0;
+  font-size: 200%;
+  margin: 0.5rem 0;
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 150%;
 }
 
 h3 {
-  font-size: 1.17rem;
+  font-size: 116.667%;
 }
 
 h4 {
-  font-size: 1rem;
+  font-size: 100%;
 }
 
 h5 {
-  font-size: 0.83rem;
+  font-size: 83.333%;
 }
 
 h6 {
-  font-size: 0.67rem;
+  font-size: 66.667%;
 }
 
 pre {
@@ -273,6 +280,7 @@ button,
 input[type=button],
 input[type=reset],
 input[type=submit],
+.button,
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   font-family: inherit;
@@ -282,6 +290,8 @@ input[type=submit],
   line-height: 1;
   padding: 0.5em 1em;
   text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
   border-radius: 2px;
   background: var(--main-color);
   color: var(--main-text-cl);
@@ -292,6 +302,7 @@ button:focus,
 input[type=button]:focus,
 input[type=reset]:focus,
 input[type=submit]:focus,
+.button:focus,
 ::-webkit-file-upload-button:focus {
   outline: 1px solid var(--button-greyedout);
   outline-offset: 1px;
@@ -300,14 +311,16 @@ input[type=submit]:focus,
 button:not([disabled]):active,
 input[type=button]:not([disabled]):active,
 input[type=reset]:not([disabled]):active,
-input[type=submit]:not([disabled]):active {
-  transform: translate(0, 1px);
+input[type=submit]:not([disabled]):active,
+.button:not([disabled]):active {
+  transform: translate(0, 2px);
 }
 
 button.secondary,
 input[type=button].secondary,
 input[type=reset].secondary,
-input[type=submit].secondary {
+input[type=submit].secondary,
+.button.secondary {
   background: var(--main-text-cl);
   color: var(--main-color);
   border: 1px solid var(--main-color);
@@ -316,7 +329,8 @@ input[type=submit].secondary {
 button[disabled],
 input[type=button][disabled],
 input[type=reset][disabled],
-input[type=submit][disabled] {
+input[type=submit][disabled],
+.button[disabled] {
   filter: grayscale(0.75) opacity(0.5);
   cursor: not-allowed;
 }
@@ -324,8 +338,36 @@ input[type=submit][disabled] {
 button.main,
 input[type=button].main,
 input[type=reset].main,
-input[type=submit].main {
+input[type=submit].main,
+.button.main {
   width: 100%;
+}
+
+button.success,
+input[type=button].success,
+input[type=reset].success,
+input[type=submit].success,
+.button.success {
+  background: var(--success);
+  color: var(--success-lighter);
+}
+
+button.warning,
+input[type=button].warning,
+input[type=reset].warning,
+input[type=submit].warning,
+.button.warning {
+  background: var(--warning);
+  color: var(--warning-lighter);
+}
+
+button.alert,
+input[type=button].alert,
+input[type=reset].alert,
+input[type=submit].alert,
+.button.alert {
+  background: var(--alert);
+  color: var(--alert-lighter);
 }
 
 input, optgroup, select, textarea {
@@ -344,6 +386,7 @@ input[type=url],
 input[type=password],
 input[type=search],
 input[type=tel],
+input[type=file],
 select,
 textarea {
   overflow: auto;
@@ -356,6 +399,10 @@ textarea {
   box-sizing: border-box;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   transition: 0.2s all;
+}
+
+input[type=search] {
+  -webkit-appearance: none;
 }
 
 select {
@@ -607,6 +654,39 @@ input[type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
+input[type=date],
+input[type=datetime-local],
+input[type=file],
+select {
+  height: 3em;
+}
+
+input[type=file] {
+  cursor: pointer;
+}
+
+input[type=date]::-webkit-clear-button,
+input[type=date]::-webkit-inner-spin-button,
+input[type=datetime-local]::-webkit-clear-button,
+input[type=datetime-local]::-webkit-inner-spin-button {
+  display: none;
+}
+
+input[type=date]::-webkit-calendar-picker-indicator,
+input[type=datetime-local]::-webkit-calendar-picker-indicator {
+  padding: 0.5rem;
+  border-radius: 50%;
+  font-size: 15px;
+  color: var(--main-color);
+  background: var(--main-text-cl);
+  transition: 0.15s opacity ease-out;
+}
+
+input[type=date]::-webkit-calendar-picker-indicator:active,
+input[type=datetime-local]::-webkit-calendar-picker-indicator:active {
+  filter: brightness(0.85);
+}
+
 [hidden], .hidden {
   display: none !important;
 }
@@ -671,37 +751,150 @@ input[type=search]::-webkit-search-decoration {
   width: 100%;
 }
 
-.cols2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+.m1 {
+  margin-left: 100%/12;
 }
 
-.shadow-1 {
+.m2 {
+  margin-left: 100%/6;
+}
+
+.m3 {
+  margin-left: 25%;
+}
+
+.m4 {
+  margin-left: 100%/3;
+}
+
+.m5 {
+  margin-left: 41.6666666667%;
+}
+
+.m6 {
+  margin-left: 50%;
+}
+
+.m7 {
+  margin-left: 58.3333333333%;
+}
+
+.m8 {
+  margin-left: 66.6666666667%;
+}
+
+.m9 {
+  margin-left: 75%;
+}
+
+.m10 {
+  margin-left: 83.3333333333%;
+}
+
+.m11 {
+  margin-left: 91.6666666667%;
+}
+
+.m12 {
+  margin-left: 100%;
+}
+
+.p10 {
+  padding: 10px;
+}
+
+.p20 {
+  padding: 20px;
+}
+
+.p30 {
+  padding: 30px;
+}
+
+.p40 {
+  padding: 40px;
+}
+
+.p50 {
+  padding: 50px;
+}
+
+.cols2, .cols3, .cols4, .cols5, .cols6 {
+  display: grid;
+  grid-gap: 10px;
+  padding: 10px;
+}
+
+.cols2 {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.cols3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.cols4 {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.cols5 {
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.cols6 {
+  grid-template-columns: repeat(6, 1fr);
+}
+
+.shadow1 {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
-.shadow-2 {
+.shadow2 {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
-.shadow-3 {
+.shadow3 {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1);
 }
 
-.shadow-4 {
+.shadow4 {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1);
 }
 
-.shadow-5 {
+.shadow5 {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1);
 }
 
-.shadow-6 {
+.shadow6 {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1), 0 32px 32px rgba(0, 0, 0, 0.1);
 }
 
-.shadow-7 {
+.shadow7 {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1), 0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1), 0 32px 32px rgba(0, 0, 0, 0.1), 0 64px 64px rgba(0, 0, 0, 0.1);
+}
+
+.app_header {
+  position: sticky;
+  z-index: 9999999;
+  top: 0;
+  width: 100%;
+  height: 5vh;
+  background: var(--main-color);
+  color: var(--main-text-cl);
+  display: grid;
+  grid-template-columns: 5vh auto 5vh;
+  padding: 0 1vh;
+}
+
+.app-menu-btn {
+  -webkit-appearance: button;
+  cursor: pointer;
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: var(--main-text-cl);
+  clip-path: polygon(10% 30%, 90% 30%, 90% 35%, 10% 35%, 10% 45%, 90% 45%, 90% 50%, 10% 50%, 10% 60%, 90% 60%, 90% 65%, 10% 65%);
 }
 
 .box-info,
