--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -8,6 +8,7 @@
 body{
 	margin:0;
 	font-family: 'Open Sans', sans-serif;
+	font-size: 1.5vh;
 	-webkit-font-smoothing: antialiased;
 }
 *,
@@ -24,12 +25,18 @@ body{
 }
 
 h2,h3,h4,h5,h6{line-height: 1;}
-h1{font-size: 2rem;margin: 0.67rem 0;}
+/*h1{font-size: 2rem;margin: 0.67rem 0;}
 h2{font-size: 1.5rem;}
 h3{font-size: 1.17rem;}
 h4{font-size: 1.00rem;}
 h5{font-size: 0.83rem;}
-h6{font-size: 0.67rem;}
+h6{font-size: 0.67rem;}*/
+h1{font-size:200%;margin:0.5rem 0;}
+h2{font-size:150%;}
+h3{font-size:116.667%;}
+h4{font-size:100%;}
+h5{font-size:83.333%;}
+h6{font-size:66.667%;}
 pre{font-family: monospace, monospace;font-size: 1em;white-space:pre-wrap;}
 p,ul,ol,dl,address{line-height: 1.5;}
 code,kbd,samp{font-family: monospace, monospace;font-size: 1em;}
