--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -15,6 +15,7 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"],
+.button,
 ::-webkit-file-upload-button{
 	-webkit-appearance: button;
 	font-family: inherit;
@@ -24,6 +25,8 @@ input[type="submit"],
 	line-height: 1;
 	padding: 0.5em 1em;
 	text-transform: uppercase;
+	text-align:center;
+	text-decoration: none;
 	border-radius: 2px;
 	background: var(--main-color);
 	color: var(--main-text-cl);
@@ -33,6 +36,7 @@ button:focus,
 input[type="button"]:focus,
 input[type="reset"]:focus,
 input[type="submit"]:focus,
+.button:focus,
 ::-webkit-file-upload-button:focus{
 	outline: 1px solid var(--button-greyedout);
 	outline-offset: 1px;
@@ -40,13 +44,15 @@ input[type="submit"]:focus,
 button:not([disabled]):active,
 input[type="button"]:not([disabled]):active,
 input[type="reset"]:not([disabled]):active,
-input[type="submit"]:not([disabled]):active{
-	transform: translate(0,1px);
+input[type="submit"]:not([disabled]):active,
+.button:not([disabled]):active{
+	transform: translate(0,2px);
 }
 button.secondary,
 input[type="button"].secondary,
 input[type="reset"].secondary,
-input[type="submit"].secondary{
+input[type="submit"].secondary,
+.button.secondary{
 	background: var(--main-text-cl);
 	color: var(--main-color);
 	border: 1px solid var(--main-color);
@@ -54,13 +60,40 @@ input[type="submit"].secondary{
 button[disabled],
 input[type="button"][disabled],
 input[type="reset"][disabled],
-input[type="submit"][disabled]{
+input[type="submit"][disabled],
+.button[disabled]{
 	filter: grayscale(0.75) opacity(0.5);
 	cursor: not-allowed;
 }
 button.main,
 input[type="button"].main,
 input[type="reset"].main,
-input[type="submit"].main{
+input[type="submit"].main,
+.button.main{
 	width: 100%;
+}
+
+button.success,
+input[type="button"].success,
+input[type="reset"].success,
+input[type="submit"].success,
+.button.success{
+	background: var(--success);
+	color: var(--success-lighter);
+}
+button.warning,
+input[type="button"].warning,
+input[type="reset"].warning,
+input[type="submit"].warning,
+.button.warning{
+	background: var(--warning);
+	color: var(--warning-lighter);
+}
+button.alert,
+input[type="button"].alert,
+input[type="reset"].alert,
+input[type="submit"].alert,
+.button.alert{
+	background: var(--alert);
+	color: var(--alert-lighter);
 }
