--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,3 +1,28 @@
+.app_header{
+	position: sticky;
+	z-index: 9999999;
+	top: 0;
+	width: 100%;
+	height: 5vh;
+	background: var(--main-color);
+	color: var(--main-text-cl);
+	display: grid;
+	grid-template-columns: 5vh auto 5vh;
+	padding: 0 1vh;
+}
+.app-menu-btn{
+	-webkit-appearance:button;
+	cursor:pointer;
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background: var(--main-text-cl);
+	clip-path: polygon( 10% 30%, 90% 30%, 90% 35%, 10% 35%, 
+						10% 45%, 90% 45%, 90% 50%, 10% 50%, 
+						10% 60%, 90% 60%, 90% 65%, 10% 65% );
+}
+
 .box-info,
 .box-success,
 .box-warning,
