--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -13,7 +13,7 @@ body:not(.dark-mode){
 	--alert-lighter: #f8d7da;
 
 	--main-color: #0854C7;
-	--main-color-lighter: #7FC7AF;
+	--main-color-lighter: #3884f7;
 	--main-text-cl: #fff;
 	--main-text-cl-darker: #ddd;
 	--button-greyedout: #bbb;
