--- a/sass/_inputfields.scss
+++ b/sass/_inputfields.scss
@@ -22,10 +22,12 @@ textarea{
 	background: rgba(0,0,0,0.05);
 	padding: 0 1rem;
 	line-height: 2;
-	border-radius: 2px;
+	border-radius: 2px 2px 0 0;
 	width: 100%;
 	box-sizing: border-box;
-	border-bottom: var(--input-border-bottom) solid rgba(0,0,0,0.1);
+	border-width: 0 0 var(--input-border-bottom) 0;
+	border-style:solid;
+	border-color:rgba(0,0,0,0.1);
 	transition: 0.2s border-bottom-color;
 }
 input[type="search"]{
@@ -83,7 +85,7 @@ textarea:not([readonly]):focus{
 }
 input::placeholder,
 textarea::placeholder{
-	font-weight:bold;
+	font-weight:500;
 	transition: 0.2s all;
 }
 input:not([readonly]):focus::placeholder,
@@ -94,10 +96,13 @@ label{
 	display: block;
 	position: relative;
 	padding: 0.85em 0;
-	cursor:pointer;
+	cursor:text;
 }
-label.required .inputLabel::after{
-	content: '*';
+label.required{
+
+	.inputLabel::after{
+		content: '*';
+	}
 }
 input+.inputLabel,
 select+.inputLabel,
@@ -106,7 +111,7 @@ textarea+.inputLabel{
 	left: 1rem;
 	top: 1rem;
 	line-height: 2;
-	font-weight:bold;
+	font-weight:500;
 	transition:  0.2s all;
 }
 input:not([readonly]):not(:focus):placeholder-shown+.inputLabel,
@@ -161,7 +166,7 @@ input[type="radio"]+.radio::after{
 	display: inline-block;
 	content: "\2713\0020";
 	font-family: 'Lucida Sans Unicode', 'Arial Unicode MS', Arial;
-	font-weight: bold;
+	font-weight: 500;
 	text-align: center;
 	color:  var(--main-text-cl);
 	width: 1em;
@@ -213,7 +218,7 @@ input[type="checkbox"][disabled]+.switch{
 input[type="radio"]+.radio+.inputLabel,
 input[type="checkbox"]+.switch+.inputLabel,
 input[type="checkbox"]+.check+.inputLabel{
-	font-weight:bold;
+	font-weight:500;
 	border-bottom:2px solid transparent;
 	transition: color 0.2s ease-out, border-bottom-color 0.2s ease-out;
 }
@@ -286,7 +291,9 @@ input[type="search"]{
 input[type="search"]::-webkit-search-decoration{
 	-webkit-appearance: none;
 }
-
+input[type="search"]::-webkit-search-cancel-button{
+	display:none;
+}
 
 input[type="date"],
 input[type="datetime-local"],
@@ -295,7 +302,7 @@ select{
 	height: 3em;
 }
 input[type="file"]{
-	font-weight:bold;
+	font-weight:500;
 	cursor:pointer;
 	padding-left:0
 }
@@ -406,3 +413,24 @@ input[type="color"]{
     color: var(--text-base);
 	content: attr(value);
 }*/
+
+
+.tagLeft{
+	display: grid;
+	grid-template-columns: min-content auto;
+
+	:first-child{
+		border-bottom: 2px solid rgba(0,0,0,0.1);
+		background: rgba(0,0,0,0.05);
+		line-height: 2em;
+		vertical-align: middle;
+		text-align: center;
+		padding: 0 0.5em;
+		color: rgba(0,0,0,0.5);
+		font-size: 1.5em;
+	}
+	&:focus-within :first-child{
+		border-bottom-color: var(--main-color);
+		color: var(--main-color);
+	}
+}
