--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -3,24 +3,33 @@
 	z-index: 9999999;
 	top: 0;
 	width: 100%;
-	height: 5vh;
+	height: 4rem;
 	background: var(--main-color);
 	color: var(--main-text-cl);
 	display: grid;
-	grid-template-columns: 5vh auto 5vh;
-	padding: 0 1vh;
+	grid-template-columns: 4rem auto 4rem;
+	padding: 0 1rem;
 }
 .app-menu-btn{
-	-webkit-appearance:button;
 	cursor:pointer;
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+.app-menu-btn::after{
+	content: '';
 	display: block;
 	position: relative;
 	width: 100%;
 	height: 100%;
 	background: var(--main-text-cl);
 	clip-path: polygon( 10% 30%, 90% 30%, 90% 35%, 10% 35%, 
-						10% 45%, 90% 45%, 90% 50%, 10% 50%, 
-						10% 60%, 90% 60%, 90% 65%, 10% 65% );
+						10% 50%, 90% 50%, 90% 55%, 10% 55%, 
+						10% 70%, 90% 70%, 90% 75%, 10% 75% );
+}
+.app-menu-btn:active::after{
+	opacity:0.5;
 }
 
 .box-info,
@@ -28,11 +37,11 @@
 .box-warning,
 .box-alert{
 	display:block;
-	margin: 0.5em 1em 0.5em 1em;
-	padding: 0 1em 0.75em 1em;
+	margin: 0.5rem 1rem 0.5rem 1rem;
+	padding: 0 1rem 0.75rem 1rem;
 	border: 1px solid transparent;
 	border-radius: 2px;
-	min-height: 30px;
+	min-height: 2.15rem;
 	cursor: default;
 }
 .box-info{ 
