--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -33,8 +33,8 @@
 .p50{padding:50px;}
 .cols2,.cols3,.cols4,.cols5,.cols6{
 	display:grid;
-	grid-gap: 10px;
-	padding: 10px;
+	grid-gap: 0.715rem;
+	padding: 0.715rem;
 }
 .cols2{grid-template-columns: repeat(2,1fr);}
 .cols3{grid-template-columns: repeat(3,1fr);}
