--- a/sass/_inputfields.scss
+++ b/sass/_inputfields.scss
@@ -3,6 +3,7 @@ input,optgroup,select,textarea{
 	font-size: 100%;
 	line-height: 1.15;
 	margin: 0;
+	height: 2.5rem;
 }
 input[type="text"],
 input[type="number"],
@@ -144,16 +145,16 @@ input[type="radio"]{
 input[type="checkbox"]+.check,
 input[type="radio"]+.radio{
 	display: inline-block;
-	height: 1em;
-	width:  1em;
+	height: 1rem;
+	width:  1rem;
 	border: 2px solid rgba(0,0,0,0.33);
 	vertical-align: middle;
 }
 input[type="checkbox"]+.switch{
 	display: inline-block;
 	line-height:1;
-	height: 1em;
-	width:  2em;
+	height: 1rem;
+	width:  2rem;
 	outline: 2px solid var(--main-color);
 	background: var(--main-text-cl);
 	vertical-align: middle;
@@ -169,8 +170,8 @@ input[type="radio"]+.radio::after{
 	font-weight: 500;
 	text-align: center;
 	color:  var(--main-text-cl);
-	width: 1em;
-	height: 1em;
+	width: 1rem;
+	height: 1rem;
 	line-height: 1;
 	vertical-align: super;
 	transition:  0.1s all ease-out;
@@ -179,10 +180,10 @@ input[type="checkbox"]+.switch::after{
 	display: inline-block;
 	content: "";
 	line-height: 1;
-	width: 0.666em;
-	height:1em;
+	width: 0.666rem;
+	height:1rem;
 	background: var(--main-color);
-	outline: 0.1em solid var(--button-greyedout);
+	outline: 0.1rem solid var(--button-greyedout);
 	transition: 0.1s transform ease-out;
 }
 
@@ -234,7 +235,7 @@ input[type="range"]{
 	appearance: none;
 	outline: none;
 	width: 100%;
-	margin-top:1em;
+	margin-top:1rem;
 	height: 1rem;
 	background: var(--button-greyedout);
 	opacity: 0.85;
@@ -242,14 +243,14 @@ input[type="range"]{
 }
 input[type="range"]::before{
 	color: var(--text-base);
-	margin-left:0.5em;
+	margin-left: 0.5rem;
 	float:left;
 	z-index:2;
 	content: attr(min);
 }
 input[type="range"]::after{
 	color: var(--text-base);
-	margin-right:0.5em;
+	margin-right:0.5rem;
 	float:right;
 	z-index:2;
 	content: attr(max);
@@ -299,7 +300,7 @@ input[type="date"],
 input[type="datetime-local"],
 input[type="file"],
 select{
-	height: 3em;
+	height: 3rem;
 }
 input[type="file"]{
 	font-weight:500;
@@ -334,13 +335,13 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator:active{
 select+.selectHint,
 select+.inputLabel+.selectHint{
 	display:inline-block;
-	height: 26px;
-	width: 26px;
+	height: 1.857em;
+	width: 1.857em;
 	background:transparent;
 	border-radius: 50%;
 	float: right;
-	margin-top: -34px;
-	margin-right: 20px;
+	margin-top: -2.357rem;
+	margin-right: 1.5rem;
 	position:relative;
 	z-index:-1;
 	transition: 0.15s background-color ease-out;
@@ -371,13 +372,13 @@ select+.inputLabel+.selectHint::after{
 input+.emptyInput,
 input+.inputLabel+.emptyInput{
     display: inline-block;
-    height: 26px;
-    width: 26px;
+    height: 1.625rem;
+    width: 1.625rem;
     background: transparent;
     border-radius: 50%;
     float: right;
-    margin-top: -37px;
-    margin-right: 20px;
+    margin-top: -2rem;
+    margin-right: 1rem;
     z-index:2;
     position: relative;
     transition: 0.15s background-color ease-out;
@@ -398,6 +399,8 @@ input+.inputLabel+.emptyInput:hover{
 
 input[type="color"]{
 	height:3em;
+	padding-left: 10%;
+	padding-right:80%;
 	cursor:pointer;
 }
 /*currently not supported*/
@@ -422,14 +425,38 @@ input[type="color"]{
 	:first-child{
 		border-bottom: 2px solid rgba(0,0,0,0.1);
 		background: rgba(0,0,0,0.05);
-		line-height: 2em;
+		height:2.5rem;
+		line-height: 2rem;
 		vertical-align: middle;
 		text-align: center;
-		padding: 0 0.5em;
+		padding: 0 0.5rem;
 		color: rgba(0,0,0,0.5);
-		font-size: 1.5em;
+		font-size: 1.5rem;
+		transition: 0.2s border-bottom-color;
 	}
 	&:focus-within :first-child{
+		border-bottom-color: var(--main-color);
+		color: var(--main-color);
+	}
+}
+
+.tagRight{
+	display: grid;
+	grid-template-columns: auto min-content;
+
+	:last-child{
+		border-bottom: 2px solid rgba(0,0,0,0.1);
+		background: rgba(0,0,0,0.05);
+		height:2.5rem;
+		line-height: 2rem;
+		vertical-align: middle;
+		text-align: center;
+		padding: 0 0.5rem;
+		color: rgba(0,0,0,0.5);
+		font-size: 1.5rem;
+		transition: 0.2s border-bottom-color;
+	}
+	&:focus-within :last-child{
 		border-bottom-color: var(--main-color);
 		color: var(--main-color);
 	}
